# liq-features

./: AGENT_STATE.md  README.md  pyproject.toml
artifacts/phase-0/: changed-files.txt  coverage-summary.txt  decisions.md  test-report.txt  verify-output.txt
artifacts/phase-1/: changed-files.txt  coverage-summary.txt  decisions.md  smoke-formula-registry.json  test-report.txt  verify-output.txt
artifacts/phase-1H/: changed-files.txt  coverage-summary.txt  decisions.md  perf.json  test-report.txt  verify-output.txt
artifacts/phase-2H/: changed-files.txt  coverage-summary.txt  decisions.md  test-report.txt  verify-output.txt
artifacts/phase-4/: decisions.md
artifacts/phase-F/: changed-files.txt  decisions.md
docs/: cache-architecture.md  exceptions.md  logging.md  vol-forecast.md  volatility.md
scripts/: smoke_formula_registry.py  smoke_quality_perf.py
src/liq/features/: __init__.py  aggregation.py  alignment.py  batch.py  cache.py  cache_exceptions.py  cache_models.py  cli.py  derived.py  drift.py  entropy.py  feature_set.py  forex.py  forex_labels.py  labels.py  microstructure.py  numpy_utils.py  params.py  pipeline.py  quantization.py  regime.py  scaling.py  stationarity.py  store.py  volatility.py
src/liq/features/indicators/: __init__.py  base.py  liq_ta.py  momentum.py  param_grids.py  registry.py  talib.py  (+3 more)
tests/: conftest.py  test_aggregation.py  test_alignment.py  test_batch.py  test_cache.py  test_cache_exceptions.py  test_cache_models.py  test_cli.py  test_cli_compute.py  test_derived.py  test_derived_prd.py  test_drift.py  test_entropy.py  test_feature_set_models.py  test_feature_store.py  test_forex_features.py  test_forex_labels.py  test_indicators.py  test_labels.py  test_liq_ta.py  test_liq_ta_mapping.py  test_mean_reversion_base.py  test_mean_reversion_contract_imports.py  test_mean_reversion_vol.py  test_metrics_package.py  test_microstructure.py  test_numpy_utils.py  test_param_grids.py  test_params.py  test_pipeline.py  test_prd_gaps.py  test_quantization.py  test_regime.py  test_regime_bootstrap.py  test_regime_protocol.py  test_regime_quality.py  test_regime_svm.py  test_regime_types.py  test_scaling.py  test_stationarity.py  (+21 more)
tests/selection/: __init__.py  test_correlation.py  test_mrmr.py  test_mutual_info.py  test_significance.py
tests/validation/: test_config.py  test_effect_size.py  test_exceptions.py  test_logging.py  test_oos_validation.py  test_protocols.py  test_results.py  test_sensitivity.py  test_temporal.py
(+48 files in other folders)
